antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__side_context_label_shows_hidden_side.snap
---
source: tui/src/chatwidget/tests/side.rs
assertion_line: 451
expression: terminal.backend()
---
"                                                                                "
"                                                                                "
" ┃ Ask Antex to do anything                                                     "
"                                                                                "
"  gpt-5.6-sol                                                ctrl + / for side  "
