antex-rs/tui/src/chatwidget/snapshots/antex_tui__chatwidget__tests__simplify_command_history.snap
---
source: tui/src/chatwidget/tests/simplify_tests.rs
expression: lines_to_single_string(&history)
---

 ┃ /simplify
